# index.js
@@ -2,7 +2,7 @@ const app = require('express')();
 const cors = require('cors');
 const bodyParser = require('body-parser');
 const connectDB = require('./config/connectToDB');
-var fileupload = require("express-fileupload");
+const fileupload = require("express-fileupload");
 
 app.use(cors());
 app.use(fileupload());
@@ -12,22 +12,6 @@ app.use(bodyParser.json());
 connectDB();
 
 const routes = "./api/routers";
-
-// Swagger Documentation Build
-// const swaggerUI = require('swagger-ui-express');
-// const swaggerJSDoc = require('swagger-jsdoc');
-// const swaggerSpec = swaggerJSDoc({
-//   swaggerDefinition: {
-//     basePath: '/api/',
-//     info: {
-//       title: 'Kirilovi API',
-//       version: '0.0.1'
-//     }
-//   },
-//   apis: [
-//     `${routes}/products`
-//   ],
-// });
 
 const swaggerUi = require("swagger-ui-express");
 swaggerDocument = require("./api/swagger.json");
@@ -40,6 +24,7 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 app.use('/files', require(`${routes}/fileImpExp`));
 app.use('/products', require(`${routes}/products`));
+app.use('/employees', require(`${routes}/employees`));
 app.get('/', (req, res) => res.send('Welcome to my API'));
 
 app.listen(
